# c-accordion

./: Android.md  Mac.md  ProjectHome.md  README.md  Raspbian.md
android/: AndroidManifest.xml  README.md  build.xml
android/res/drawable/: ic_button.xml
android/res/layout/: activity_main.xml
android/res/menu/: main.xml
android/res/values/: integers.xml  strings.xml
android/res/xml/: preferences.xml
android/src/org/billthefarmer/accordion/: MainActivity.java
mac/: Accordion.c  Accordion.icns  Changelog.txt  Info.plist  Makefile  PkgInfo  Readme.rtf
mac/Accordion.xcodeproj/: project.pbxproj
raspbian/: AUTHORS  Accordion.c  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.de  Makefile.in  NEWS  README  configure  configure.ac
windows/: Accordion.c  Accordion.manifest  Accordion.nsi  Accordion.rc  Changes  Makefile  Readme.txt
